--- a/public/assets/css/NavBar.css
+++ b/public/assets/css/NavBar.css
@@ -63,10 +63,18 @@ header nav ul li a:hover {
     background: white;
     border: 1px solid #ddd;
     min-width: 150px;
-    
+    border: none;
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+    border-bottom-left-radius: 8%;
+    border-bottom-right-radius: 8%;
     z-index: 999;
     flex-direction: column;
+    
 }
+
+@-webkit-keyframes scale-up-ver-top{0%{-webkit-transform:scaleY(.4);transform:scaleY(.4);-webkit-transform-origin:100% 0;transform-origin:100% 0}100%{-webkit-transform:scaleY(1);transform:scaleY(1);-webkit-transform-origin:100% 0;transform-origin:100% 0}}
+@keyframes scale-up-ver-top{0%{-webkit-transform:scaleY(.4);transform:scaleY(.4);-webkit-transform-origin:100% 0;transform-origin:100% 0}100%{-webkit-transform:scaleY(1);transform:scaleY(1);-webkit-transform-origin:100% 0;transform-origin:100% 0}}
+.dropdown-menu {-webkit-animation:scale-up-ver-top .4s cubic-bezier(.39,.575,.565,1.000) both;animation:scale-up-ver-top .4s cubic-bezier(.39,.575,.565,1.000) both}
 
 .dropdown-menu li a {
     padding: 10px;
