--- a/public/assets/css/NavBar.css
+++ b/public/assets/css/NavBar.css
@@ -51,7 +51,9 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    color: #f1c40f;
+    color: #e6a00b;
+     box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+     border-radius: 10%;
 }
 
 /* === DROPDOWN === */
