--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -18,6 +18,9 @@ body {
     background: var(--cor-fundo);
     color: var(--cor-texto);
 }
+header{
+    position: sticky;
+}
 
 /* Tipografia */
 h1.titulo {
