--- a/public/assets/css/NavBar.css
+++ b/public/assets/css/NavBar.css
@@ -1,4 +1,8 @@
-
+header, nav {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
 .navbar {
     background-color: rgb(255, 255, 255);
     backdrop-filter: blur(10px);
