--- a/public/assets/css/Admin.css
+++ b/public/assets/css/Admin.css
@@ -6,6 +6,7 @@ body {
 }
 /*=============== LOGIN ===================/*/
 
+
 .container {
     min-height: 100vh;
     display: flex;
@@ -131,11 +132,30 @@ button[type="submit"]:hover {
 
 
 /*=============== HOME ===================/*/
+
+/*=============== animatior ===================/*/
+
+@-webkit-keyframes scale-up-hor-center{0%{-webkit-transform:scaleX(.4);transform:scaleX(.4)}100%{-webkit-transform:scaleX(1);transform:scaleX(1)}}
+@keyframes scale-up-hor-center{0%{-webkit-transform:scaleX(.4);transform:scaleX(.4)}100%{-webkit-transform:scaleX(1);transform:scaleX(1)}}
+div.card{-webkit-animation:scale-up-hor-center 2s cubic-bezier(.39,.575,.565,1.000) both;animation:scale-up-hor-center 2s cubic-bezier(.39,.575,.565,1.000) both}
+
+@-webkit-keyframes tracking-in-expand-fwd-bottom{0%{letter-spacing:-.5em;-webkit-transform:translateZ(-700px) translateY(500px);transform:translateZ(-700px) translateY(500px);opacity:0}40%{opacity:.6}100%{-webkit-transform:translateZ(0) translateY(0);transform:translateZ(0) translateY(0);opacity:1}}
+@keyframes tracking-in-expand-fwd-bottom{0%{letter-spacing:-.5em;-webkit-transform:translateZ(-700px) translateY(500px);transform:translateZ(-700px) translateY(500px);opacity:0}40%{opacity:.6}100%{-webkit-transform:translateZ(0) translateY(0);transform:translateZ(0) translateY(0);opacity:1}}
+h1.h1{-webkit-animation:tracking-in-expand-fwd-bottom .8s cubic-bezier(.215,.61,.355,1.000) both;animation:tracking-in-expand-fwd-bottom .8s cubic-bezier(.215,.61,.355,1.000) both}
+p.p{-webkit-animation:tracking-in-expand-fwd-bottom .8s cubic-bezier(.215,.61,.355,1.000) both;animation:tracking-in-expand-fwd-bottom .8s cubic-bezier(.215,.61,.355,1.000) both}
+/*=============== animation ===================/*/
+section.home-content{
+    padding: 1rem;
+    align-items: center;
+    
+}
+
 .containerHome{
     max-width: 100vw;
     height: 100vh;
     overflow-x: hidden;
 }
+
 .header {
     margin: 0;
     width: 100%;
